--- a/README
+++ b/README
@@ -5,39 +5,40 @@ The GTK+ GUI focuses on playing and managing audio files, but, being
 based on xine, supports video as well.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  gdk-pixbuf2-2.12.12-1
-  glib2-2.16.6-1
-  gtk2-x11-2.12.12-1
-  libdbus-glib_1_2-0.76-1
-  libdbus1_3-1.2.3-1
-  libexo03-0.3.2-2
-  libintl8-0.17-1
-  libX11_6-1.1.5-1
-  libXext6-1.0.4-1
-  libxfce4util-4.4.1-1
-  libxfcegui4-4.4.1-1
-  libxine1-1.1.15-1
-  libXss1-1.1.3-1
-  libXtst6-1.0.3-2
-  pango-1.20.5-1
-  startup-notification-0.9-1
-  taglib-1.5-1
+  cygwin-1.7.0-51
+  libdbus-glib_1_2-0.80-10
+  libdbus1_3-1.2.14-1
+  libexo0.3_0-0.3.101-1
+  libgcc1-4.3.2-2
+  libgdk_pixbuf2.0_0-2.16.3-1
+  libglib2.0_0-2.20.4-1
+  libgtk2.0_0-2.16.3-1
+  libintl8-0.17-11
+  libpango1.0_0-1.24.3-1
+  libstartup-notification1_0-0.10-1
+  libtag_c0-1.5-10
+  libX11_6-1.2.1-1
+  libXext6-1.0.5-10
+  libxfce4util4-4.6.1-1
+  libxfcegui4_4-4.6.1-1
+  libxine1-1.1.16.3-1
+  libXss1-1.1.3-10
+  libXtst6-1.0.3-10
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-1
-  automake1.10-1.10.1-1
-  binutils-20080624-2
-  cygport-0.4.3-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  intltool-0.40.5-1
-  libtool-2.2.6a-1
-  make-3.81-1
-  pkg-config-0.23a-2
+  autoconf2.5-2.63-10
+  automake1.10-1.10.2-10
+  binutils-2.19.51-1
+  cygport-0.9.7-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  intltool-0.40.6-1
+  libtool-2.2.7a-13
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
-  xfce4-dev-tools-4.5.91-1
+  xfce4-dev-tools-4.6.0-1
 
 Canonical website:
   http://spuriousinterrupt.org/projects/xfmedia
@@ -66,23 +67,13 @@ Files included in the binary package:
   /etc/xdg/xfmedia/keybindings.rc
   /usr/bin/xfmedia-remote.exe
   /usr/bin/xfmedia.exe
-  /usr/include/xfmedia/xfmedia-interface.h
-  /usr/include/xfmedia/xfmedia-playlist-queue.h
-  /usr/include/xfmedia/xfmedia-playlist.h
-  /usr/include/xfmedia/xfmedia-plugin.h
-  /usr/include/xfmedia/xfmedia-remote-client.h
-  /usr/include/xfmedia/xfmedia-remote-common.h
-  /usr/include/xfmedia/xfmedia-settings.h
-  /usr/include/xfmedia/xfmedia-video-window.h
-  /usr/lib/pkgconfig/xfmedia-plugin.pc
   /usr/share/applications/xfmedia.desktop
-  /usr/share/doc/xfmedia-0.9.2/AUTHORS
-  /usr/share/doc/xfmedia-0.9.2/COPYING
-  /usr/share/doc/xfmedia-0.9.2/ChangeLog
-  /usr/share/doc/xfmedia-0.9.2/INSTALL
-  /usr/share/doc/xfmedia-0.9.2/NEWS
-  /usr/share/doc/xfmedia-0.9.2/README
-  /usr/share/doc/xfmedia-0.9.2/TODO
+  /usr/share/doc/xfmedia/AUTHORS
+  /usr/share/doc/xfmedia/COPYING
+  /usr/share/doc/xfmedia/ChangeLog
+  /usr/share/doc/xfmedia/NEWS
+  /usr/share/doc/xfmedia/README
+  /usr/share/doc/xfmedia/TODO
   /usr/share/icons/hicolor/22x22/actions/xfmedia-repeat.png
   /usr/share/icons/hicolor/22x22/actions/xfmedia-shuffle.png
   /usr/share/icons/hicolor/48x48/apps/xfmedia.png
@@ -132,8 +123,8 @@ Files included in the binary package:
 
 Port Notes:
 
------ version 0.9.2-1 -----
-Initial release for Cygwin.
+----- version 0.9.2-10 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
